This is my second commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Car Price Prediction</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 
     <style>
         body {
-            background-color: lightslategray;
+            background-color: lightblue;
             text-align: center;
             padding: 0px;
         }
@@ -59,7 +59,7 @@
             border-style: solid;
             font-family: cursive;
             text-align: center;
-            background-color: rgb(168, 131, 61);
+            background-color: rgb(255, 255, 255);
             font-size: medium;
             position: absolute;
             width: 700px;
